--- a/landingpage/templates/landingpage/first_section.html
+++ b/landingpage/templates/landingpage/first_section.html
@@ -8,8 +8,7 @@
     <div class="dark__background">
         <div class="container d-flex justify-content-center">
             <div class="second__navbar p-2 w-100">
-                <span>Strona główna</span> <span>/</span>
-                <span>Oferta dla piłkarza</span><span>/</span>
+                <a href="/"><span>Strona główna</span></a><span>/</span>
                 <span>Wsparcie transferowe</span>
             </div>
         </div>
