--- a/landingpage/templates/landingpage/navbar.html
+++ b/landingpage/templates/landingpage/navbar.html
@@ -30,7 +30,7 @@
 
             <div class="container-fluid align-items-center fixed-top">
 
-                    <nav class="navbar navbar-expand-lg dark__background navbar-dark px-3">
+                    <nav class="navbar navbar-expand-lg dark__background navbar-dark">
                         <span class="logo">
                             <a href="{% if menus_logo_url %}{{ menus_logo_url }}{% else %}/{% endif %}" class="">
                                 Play<span>Maker</span><small class="">.pro</small>
@@ -119,7 +119,6 @@
                             </ul>
                         </div>
                     </nav>
-
             </div>
         </div>
     </header>
