--- a/landingpage/templates/landingpage/partials/form_modal_2.html
+++ b/landingpage/templates/landingpage/partials/form_modal_2.html
@@ -4,9 +4,11 @@
     <div class="modal-content">
       <div class="modal-body">
           <div class="">
-              <h1>Wybór ligii</h1>
+              <h1>Wybór miejscowości</h1>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet atque autem doloribus earum error explicabo facere facilis fugiat fugit id illum, laborum libero modi nisi placeat, quas reiciendis similique vel.
+                  Określ z jakiego miasta oraz jak daleko możesz dojeżdżać na treningi.
+                  Te informacje są bardzo istotne gdy zmieniasz miejsce zamieszkania lub przenosisz się na studia.
+                  Znajdźmy kluby, które dadzą Ci komfort logistyczny
               </p>
           </div>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">Zamknij</button>
