--- a/landingpage/templates/landingpage/pricing_section.html
+++ b/landingpage/templates/landingpage/pricing_section.html
@@ -24,7 +24,7 @@
             <p class="pricelist__price">299 zł</p>
         </div>
         <div class="d-flex w-100 px-1 justify-content-between">
-            <p class="pricelist_desc w-25">Klasa profesjonalna <br> (2 liga lub wyżej)</p>
+            <p class="pricelist_desc w-25">Poziom profesjonalny <br> (2 liga lub wyżej)</p>
             <p class="pricelist__price">Cena do ustalenia</p>
         </div>
     </div>
