--- a/landingpage/templates/landingpage/faq_accordeon.html
+++ b/landingpage/templates/landingpage/faq_accordeon.html
@@ -8,8 +8,7 @@
         </h2>
         <div id="collapse__first" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
-                Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class.
-                This is the first item's accordion body.
+                Twój opiekun skontaktuje się z Tobą w ciągu 48 godzin i przedstawi Ci szczegóły.
             </div>
         </div>
     </div>
@@ -22,8 +21,21 @@
         </h2>
         <div id="collapse__second" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
-                Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class.
-                This is the second item's accordion body. Let's imagine this being filled with some actual content.
+                Koszt usługi jest zależny od poziomu, na którym chcesz grać.
+            </div>
+        </div>
+    </div>
+
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="test__level">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse__last" aria-expanded="false" aria-controls="collapse__last">
+                Na jaki poziom testów mogę się zgłosić?
+            </button>
+        </h2>
+        <div id="collapse__last" class="accordion-collapse collapse" aria-labelledby="test__level" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+                Adekwatny do Twoich umiejętności. Pamiętaj, że zgłoszenie weryfikuje nasz skaut, który Cię poinformuje o rekomendowanym rozwiązaniu.
+                Jeśli ustawisz zbyt wysoki poziom, zaproponujemy niższy. Od Ciebie będzie wtedy zależeć czy mamy rozpocząć poszukiwania.
             </div>
         </div>
     </div>
@@ -36,9 +48,7 @@
         </h2>
         <div id="collapse__third" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
-                Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class.
-                This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance,
-                a bit more representative of how this would look in a real-world application.
+                Płatność odbywa się przez przelew tradycyjny. Po otrzymaniu środków rozpoczynamy działania w organizacji testów (zaksięgowanie płatności trwa od 12 do 48 godzin)
             </div>
         </div>
     </div>
@@ -51,9 +61,7 @@
         </h2>
         <div id="collapse__fourth" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
-                Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class.
-                This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance,
-                a bit more representative of how this would look in a real-world application.
+                Wspólnie z opiekunem ustalicie, gdzie najlepiej przejść testy piłkarskie. Propozycje testów zależne są od zainteresowania klubów Twoją osobą. Minimalna liczba testów wynosi 1.
             </div>
         </div>
     </div>
@@ -66,9 +74,7 @@
         </h2>
         <div id="collapse__fifth" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
-                Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body.
-                Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative
-                of how this would look in a real-world application.
+                Zwrócimy Ci przesłane pieniądze
             </div>
         </div>
     </div>
@@ -81,9 +87,7 @@
         </h2>
         <div id="collapse__sixth" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
-                Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class.
-                This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a
-                bit more representative of how this would look in a real-world application.
+                Poszukiwania testów trwają maksymalnie do miesiąca. Później Ty decydujesz czy nadal mamy prowadzić poszukiwania.
             </div>
         </div>
     </div>
@@ -96,8 +100,7 @@
         </h2>
         <div id="collapse__seventh" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
-                Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body.
-                Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.
+               48 godzin od wysłania zgłoszenia
             </div>
         </div>
     </div>
