--- a/landingpage/templates/landingpage/partials/form_modal_1.html
+++ b/landingpage/templates/landingpage/partials/form_modal_1.html
@@ -6,7 +6,9 @@
           <div class="">
               <h1>Wybór ligii</h1>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet atque autem doloribus earum error explicabo facere facilis fugiat fugit id illum, laborum libero modi nisi placeat, quas reiciendis similique vel.
+                Wybierz ligę w której chciałbyś się przetestować.
+                  Pamiętaj, że zgłoszenie weryfikuje nasz skaut, który Cię poinformuje o ocenie Twojego potencjału.
+                  Jeśli ustawisz zbyt wysoki poziom, zaproponujemy niższy. Od Ciebie będzie wtedy zależeć czy mamy rozpocząć poszukiwania.
               </p>
           </div>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">Zamknij</button>
