--- a/landingpage/templates/landingpage/first_section.html
+++ b/landingpage/templates/landingpage/first_section.html
@@ -58,9 +58,9 @@
 
                     <div class="d-flex justify-content-center mt-2 flex-column observe-div">
                         {% if user.is_authenticated %}
-                            <a href="#" class="text-center reach_us_btn">Zgłoś się</a>
+                            <a href="#test__section" class="text-center reach_us_btn">Zgłoś się</a>
                         {% else %}
-                           <a href="#" class="text-center reach_us_btn">Zaloguj się i zgłoś</a>
+                           <a href="/login/" class="text-center reach_us_btn">Zaloguj się i zgłoś</a>
                         {% endif %}
                         <span class="text-center my-4 prices__text">
                             Ceny już od 149 zł • Szybkie zgłoszenie i szybka odpowiedź (max 48h)
@@ -81,7 +81,7 @@
         <div class="container">
 
             <div class="second__navbar_fixed d-flex justify-content-between align-items-start mx-3">
-                <a href="history__section"><p class="active__border">Historie</p></a>
+                <a href="#history__section"><p class="active__border">Historie</p></a>
                 <a href="#how_it_works"><p>jak to działa?</p></a>
                 <a href="#price__section"><p>Cenik</p></a>
                 <a href="#test__section"><p>Formularz</p></a>
